@@ -8,6 +8,7 @@ noinst_HEADERS =       quartz_types.h \
 		       quartz_table_entries.h \
 		       quartz_table.h \
 		       quartz_record.h \
+		       quartz_attributes.h \
 		       quartz_utils.h \
 		       quartz_log.h
 #		       quartz_postlist.h \
@@ -18,6 +19,7 @@ libquartz_la_SOURCES = quartz_database.cc \
 		       quartz_table_entries.cc \
 		       quartz_table.cc \
 		       quartz_record.cc \
+		       quartz_attributes.cc \
 		       quartz_utils.cc \
 		       quartz_log.cc
 #		       quartz_postlist.cc \
