@@ -1,0 +1,118 @@
+/* quartz_attributes.cc: Attributes in quartz databases
+ *
+ * ----START-LICENCE----
+ * Copyright 1999,2000 BrightStation PLC
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * USA
+ * -----END-LICENCE-----
+ */
+
+#include "quartz_attributes.h"
+#include "quartz_utils.h"
+#include "utils.h"
+#include "om/omerror.h"
+
+void
+QuartzAttributesManager::make_key(QuartzDbKey & key,
+				  om_docid did,
+				  om_keyno keyno)
+{
+    key.value = pack_uint(did);
+}
+
+void
+QuartzAttributesManager::add_attribute(QuartzBufferedTable & table,
+				       const OmKey & attribute,
+				       om_docid did,
+				       om_keyno keyno)
+{
+    QuartzDbKey key;
+    make_key(key, did, keyno);
+    QuartzDbTag * tag = table.get_or_make_tag(key);
+    std::string newvalue;
+
+    const char * pos = tag->value.data();
+    const char * end = pos + tag->value.size();
+
+    bool have_added = false;
+    
+    while (pos && pos != end) {
+	om_keyno this_attrib_no;
+	if (!unpack_uint(&pos, end, &this_attrib_no)) {
+	    if (pos == 0) throw OmDatabaseCorruptError("Incomplete item in attribute table - document ID " + om_tostring(did));
+	    else throw OmRangeError("Key number in attribute table is too large - document ID " + om_tostring(did));
+	}
+
+	std::string this_attribute;
+	if (!unpack_string(&pos, end, this_attribute)) {
+	    if (pos == 0) throw OmDatabaseCorruptError("Incomplete item in attribute table - document ID " + om_tostring(did));
+	    else throw OmRangeError("Item in attribute table is too large - document ID " + om_tostring(did));
+	}
+
+	if (this_attrib_no > keyno && !have_added) {
+	    have_added = true;
+	    newvalue += pack_uint(keyno);
+	    newvalue += pack_string(attribute.value);
+	}
+
+	newvalue += pack_uint(this_attrib_no);
+	newvalue += pack_string(this_attribute);
+    }
+    if (!have_added) {
+	have_added = true;
+	newvalue += pack_uint(keyno);
+	newvalue += pack_string(attribute.value);
+    }
+    tag->value = newvalue;
+}
+
+void
+QuartzAttributesManager::get_attribute(const QuartzTable & table,
+				       OmKey & attribute,
+				       om_docid did,
+				       om_keyno keyno)
+{
+    QuartzDbKey key;
+    make_key(key, did, keyno);
+    QuartzDbTag tag;
+    bool found = table.get_exact_entry(key, tag);
+
+    attribute.value = "";
+    if (!found) return;
+
+    const char * pos = tag.value.data();
+    const char * end = pos + tag.value.size();
+
+}
+
+void
+QuartzAttributesManager::get_all_attributes(const QuartzTable & table,
+					    std::map<om_keyno, OmKey> & attributes,
+					    om_docid did)
+{
+    QuartzDbKey key;
+    make_key(key, did, 0);
+    QuartzDbTag tag;
+    bool found = table.get_exact_entry(key, tag);
+
+    attributes.clear();
+    if (!found) return;
+
+    const char * pos = tag.value.data();
+    const char * end = pos + tag.value.size();
+
+}
+
